--- a/cv.html
+++ b/cv.html
@@ -57,7 +57,7 @@
     <h1>CV PDF</h1>
     <div class="pdf-container">
         <!-- Le fichier PDF est chargé ici -->
-        <iframe src="https://cdn.glitch.global/57b7fad0-3123-4ec7-9104-367a69678bc6/CV%20EWETOLA%20FIRAAS.pdf?v=1736633034409" title="CV PDF"></iframe>
+        <iframe src="https://github.com/firaas-321/skills-github-pages/blob/main/assets/CV%20EWETOLA%20FIRAAS.pdf" title="CV PDF"></iframe>
     </div>
     <!-- Bouton Retour -->
     <button class="back-button" onclick="history.back()">Retour</button>
