--- a/cv.html
+++ b/cv.html
@@ -57,7 +57,7 @@
     <h1>CV PDF</h1>
     <div class="pdf-container">
         <!-- Le fichier PDF est chargé ici -->
-        <iframe src="https://github.com/firaas-321/skills-github-pages/blob/eda14f62494473de160df43b852c26842b247908/assets/CV%20EWETOLA%20FIRAAS.pdf" title="CV PDF"></iframe>
+        <iframe src="./assets/CV%20EWETOLA%20FIRAAS.pdf" title="CV PDF"></iframe>
     </div>
     <!-- Bouton Retour -->
     <button class="back-button" onclick="history.back()">Retour</button>
